syntax = "proto3";

option go_package = "github.com/gambarini/grpcdemo/pb/contactpb";

package contact;

service Contacts {

    rpc StoreContacts(stream StoreContact) returns (stream Contact) {}
    rpc ListContacts(Filter) returns (stream Contact) {}

}

message StoreContact {
    string contact_id = 1;
    Contact contact = 2;
}

message Contact {

    string id = 1;
    string name = 2;
    ContactType type = 3;

}

message Filter {
    string contact_id = 1;
}

enum ContactType {
    ADMIN = 0;
    STANDARD = 1;
    EXTERNAL = 2;
}